package dmRenderDDF;

import "ddf/ddf_extensions.proto";
import "ddf/ddf_math.proto";

option java_package = "com.dynamo.render.proto";
option java_outer_classname = "Font";

enum FontTextureFormat
{
    TYPE_BITMAP          = 0 [(displayName) = "Bitmap"];
    TYPE_DISTANCE_FIELD  = 1 [(displayName) = "Distance Field"];
}

message FontDesc
{
    required string font = 1 [(resource)=true];
    required string material = 2 [(resource)=true];
    required uint32 size = 3;
    optional uint32 antialias = 4 [default = 1];
    optional float alpha = 5 [default = 1.0];
    optional float outline_alpha = 6 [default = 0.0];
    optional float outline_width = 7 [default = 0.0];
    optional float shadow_alpha = 8 [default = 0.0];
    optional uint32 shadow_blur = 9 [default = 0];
    optional float shadow_x = 10 [default = 0.0];
    optional float shadow_y = 11 [default = 0.0];
    optional string extra_characters = 12 [default = ""];
    optional FontTextureFormat output_format = 13 [default = TYPE_BITMAP];
}

message FontMap
{
    message Glyph
    {
        required uint32 character = 1;
        optional uint32 width = 2 [default = 0];
        optional float advance = 3 [default = 0.0];
        optional float left_bearing = 4 [default = 0.0];
        optional uint32 ascent = 5 [default = 0];
        optional uint32 descent = 6 [default = 0];
        optional int32 x = 7 [default = 0];
        optional int32 y = 8 [default = 0];
    }

    repeated Glyph glyphs = 1;
    required string material = 2 [(resource)=true];

    optional float shadow_x = 6;
    optional float shadow_y = 7;
    required float max_ascent = 8;
    required float max_descent = 9;
    optional FontTextureFormat image_format = 10 [default = TYPE_BITMAP];
    optional float sdf_scale = 11 [default = 1];
    optional float sdf_offset = 12 [default = 0];
    optional float sdf_outline = 13 [default = 0];
    repeated string textures = 14 [(resource)=true];
}
